--- a/src/index.scss
+++ b/src/index.scss
@@ -46,13 +46,48 @@ p {
 
 
 
+.cartEmpty{
+  text-align: center;
 
+  p{
+    width: 280px;
+    line-height: 24px;
+  }
+
+  .greenButton{
+    width: 245;
+    margin-top: 20px;
+
+
+    &:hover{
+      img{
+        transform: rotate(180deg) translateX(3px);
+      }
+    }
+    img{
+      position: relative;
+      top: 1px;
+      transform: rotate(180deg);
+      margin-right: 15px;
+      transition: transform 0.15s ease-in-out;
+    }
+  }
+}
 
 .search-block {
   border: 1px solid #f3f3f3;
   border-radius: 10px;
   padding: 0 15px;
+  position: relative;
 
+  .clear{
+    position: absolute;
+    right: 0;
+    height: 18px;
+    width: 18px;
+    top: 13px;
+    right: 15px;
+  }
   input {
     border: 0;
     padding: 13px;
